Revert "strona do tworzenia zbiórek"
This reverts commit 9096df7889c77d4566ba1d22e5d9064381209d08.

--- a/Views/User/collection.cshtml
+++ b/Views/User/collection.cshtml
@@ -1,88 +1,7 @@
-﻿@model Prezentomat.Models.UserClass
-
+﻿
 @{
-    Layout = "~/Views/Shared/_HomeLayout.cshtml";
-    ViewBag.Title = "Collection";
+    ViewBag.Title = "collection";
 }
+Tworzenie zbioreczek tak o 
+<h2>collection</h2>
 
-<main>
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        <div class="Clear-flex-box-row">
-
-
-            <div class="Flex-box-col">
-                Email
-                <div class="Clear-flex-box-col">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/at.png" />
-                        @Html.TextBoxFor(model => model.email)
-                    </div>
-
-                </div>
-
-                Hasło
-                <div class="Clear-flex-box-col">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/padlock.png" />
-                        @Html.PasswordFor(model => model.password)
-                    </div>
-
-                </div>
-
-                Powtórz Hasło
-                <div class="Clear-flex-box-col">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/padlock.png" />
-                        @Html.PasswordFor(model => model.repeat_password)
-                    </div>
-
-                </div>
-
-                Imię
-                <div class="Clear-flex-box-col">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/name.png" />
-                        @Html.TextBoxFor(model => model.firstname)
-                    </div>
-
-                </div>
-
-                Nazwisko
-                <div class="Clear-flex-box-col">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/name.png" />
-                        @Html.TextBoxFor(model => model.lastname)
-                    </div>
-
-                </div>
-
-                Data urodzenia
-                <div class="Clear-flex-box-col">
-                    <div class="Flex-box-input">
-                        <img src="~/Images/birthday.png" />
-                        @Html.TextBoxFor(model => model.birthdate)
-                    </div>
-
-                </div>
-
-                <div class="Flex-box-checkbox">
-                    @Html.CheckBox("isActive", false)
-                    Akceptuję regulamin
-                </div>
-                <input type="submit" value="Zarejestruj" />
-
-
-
-                @Html.ValidationSummary(false, "")
-
-
-            </div>
-        </div>
-    }
-
-</main>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
