--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
+
+    </style>
+
+
+    </head>
     <body>
 
 
@@ -21,7 +26,6 @@
                     Jakiś opis może
                     <p>
                         <input type="submit" value="Stwórz zbiórkę" />
-                        @Html.ActionLink("Stworz zbiórke", "Collection", "User")
                         <input type="submit" value="Przeglądaj swoje zbiórki" />
                     </p>
                 </div>
