Strona główna / kolory do zmiany

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,32 +4,107 @@
 }
 <main>
 
-    <div class="Flex-box-col">
+    <head>
+        <meta charset="utf-8">
 
-        <div class="Clear-flex-box-row">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <title>Untitled</title>
 
-            
-                   Nasza aplikacja powstała aby ułatwić organizację zbiórek na różne cele.
-                
-                
-                    Skorzystaj z niej! ;)
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
 
-        </div>
-        <hr style="width:200px;"/>
-        <div class="Flex-box-row">
+    </head>
+    <main>
 
-            Nie masz konta? Zarejestruj się.
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <div class="intro">
 
         </div>
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <h2 class="text-center">Prezentomat</h2>
+                <p class="text-center">Witamy w naszej aplikacji. Tutaj możesz założyć zbiórkę na każdą okazję!!! </p>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="https://iv.pl/images/f8ac6759dba840cd04f4cee063b908ac.jpg" class="img-thumbnail" alt="...">
+
+                            <div class="card-body">
+                                <p>Na prezent </p>
+                                <p class="card-text">Nasza strona jest idealny miejscem na założenie zbiórki na urodzinowy prezent.</p>
+                                <p></p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="https://iv.pl/images/2233658c604bf863c167aa31b8df7d81.jpg" class="img-thumbnail" alt="...">
+
+                            <div class="card-body">
+                                <p>Na podróz ze znajomymi</p>
+                                <p class="card-text">U nas łatwo zbierzesz wspólnie ze znajomymi pieniądze potrzebne na waszą idealną podróż.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="https://iv.pl/images/6e67f53b2202ad250783b794c8e40a51.jpg" class="img-thumbnail" alt="...">
+
+                            <div class="card-body">
+                                <p>Na nowy sprzęt</p>
+                                <p class="card-text">nie mam pomysłu takze jak cos wymyślicie to dawać znac .</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <body>
+
+            <div class="album py-5 bg-light">
+                <div class="container">
+                    <div class="features-clean">
+                        <div class="container">
+                            <div class="row features">
+                                <div class="col-sm-6 col-lg-6 item">
+                                    <h4><i class="bi bi-shield-check"></i></h4>
+                                    <h3 class="name">Bezpieczeństwo</h3>
+                                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est.</p>
+                                </div>
+                                <div class="col-sm-6 col-lg-6 item">
+                                    <h4><i class="bi bi-person-circle"></i></h4>
+                                    <h3 class="name">Anonimowość zbiórki</h3>
+                                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est.</p>
+                                </div>
+                                <div class="col-sm-6 col-lg-6 item">
+                                    <h4><i class="bi bi-cash"></i></h4>
+                                    <h3 class="name">Brak prowizji</h3>
+                                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est.</p>
+                                </div>
+                                <div class="col-sm-6 col-lg-6 item">
+                                    <h4><i class="bi bi-check-circle"></i></h4>
+                                    <h3 class="name">Prostota</h3>
+                                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est.</p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        </body>
+    </main>
 
 
-
-    </div>
-
-
-
-
-   
 
 </main>
