--- a/Views/Gathering/Create_old.cshtml
+++ b/Views/Gathering/Create_old.cshtml
@@ -1,4 +1,4 @@
-﻿@model Prezentomat.Models.GatheringClass
+﻿@model Prezentomat.Models.AddGatheringModel
 
 @{
     Layout = "~/Views/Shared/_HomeLayout.cshtml";
@@ -9,11 +9,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
+    <title>Create</title>
 </head>
 <main>
 <body>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm()) 
     {
         @Html.AntiForgeryToken()
         
@@ -21,9 +21,13 @@
             <h4>GatheringClass</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.gathering_id)
-    
-            
+            <div class="form-group">
+                @Html.LabelFor(model => model.current_amount, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.current_amount, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.current_amount, "", new { @class = "text-danger" })
+                </div>
+            </div>
     
             <div class="form-group">
                 @Html.LabelFor(model => model.target_amount, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -49,11 +53,17 @@
                 </div>
             </div>
     
-           
+            <div class="form-group">
+                @Html.LabelFor(model => model.creator_id, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.creator_id, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.creator_id, "do zautomatyzowania", new { @class = "text-danger" })
+                </div>
+            </div>
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-default" />
                 </div>
             </div>
         </div>
