--- a/Views/Gathering/Index.cshtml
+++ b/Views/Gathering/Index.cshtml
@@ -48,8 +48,8 @@
                                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            @Html.ActionLink("View", "Details", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
-                                            @Html.ActionLink("Edit", "Edit", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
+                                            @Html.ActionLink("Szczegóły", "Details", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
+                                            @Html.ActionLink("Edytuj", "Edit", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
 
                                         </div>
                                         <small class="text-muted">@Html.DisplayFor(modelItem => item.finish_date)</small>
