pomysł na 1 strone komputer

--- a/Views/Gathering/Details.cshtml
+++ b/Views/Gathering/Details.cshtml
@@ -71,7 +71,7 @@
                         <p class="description"></p>
                         <button class="btn btn-primary" type="button" style="width:100%;border:1px solid;border-radius:15px;">
 
-                            @Html.ActionLink("Edytuj", "Edit", new { id = gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @Html.ActionLink("Edytuj", "Edit", new { id = gathering_id }@*,   new { @class = "btn btn-sm btn-outline-secondary" }*@)
 
                         </button>
                     </div>
