--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
 
                             <div class="card-body">
                                 <p>Na nowy sprzęt</p>
-                                <p class="card-text">nie mam pomysłu takze jak cos wymyślicie to dawać znac .</p>
+                                <p class="card-text">Komputer Twojego kolegi jest już przestarzały? Nie da rady na nim pracować? Zafundujcie mu nowy sprzęt, aby mógł cieszyć się pracą.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                 </div>
                             </div>
