--- a/Views/Gathering/AddUser.cshtml
+++ b/Views/Gathering/AddUser.cshtml
@@ -3,16 +3,29 @@
 @{
     ViewBag.Title = "AddUser";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    var i = 0;
 }
 
-<h2>AddUser</h2>
-
-@foreach (var user in Model)
-{
-    using (Html.BeginRouteForm(user))
-    {
-        <input type="submit" value=@user.email />
-    }
-}
-
-
+<main>
+    <div class="Clear-flex-box-row">
+        <div class="Flex-box-col">
+            
+            @foreach (var user in Model)
+            {
+                using (Html.BeginRouteForm(user))
+                {
+                    <br>
+                    <input type="submit" value=@user.email style="border: 1px solid; border-radius: 15px; padding:10px 25px;text-decoration:none;color:white;background:none;cursor:pointer;font-size:16px;align-self:center; " />
+                }
+                i++;
+            }
+            @if(i==0)
+            {
+                <button style="border: 1px solid; border-radius: 15px; padding:10px 25px;text-decoration:none;color:white;background:none;font-size:16px;align-self:center; ">
+                    Brak możliwych użytkowników do dodania
+                </button>
+            }
+            <br>
+        </div>
+    </div>
+</main>
