--- a/Views/Gathering/Details.cshtml
+++ b/Views/Gathering/Details.cshtml
@@ -64,7 +64,7 @@
                             <i class="fa fa-user-plus icon"></i>
                             <h3 class="name">Dodaj użytkownika</h3>
                             <p class="description"></p>
-                            <button class="btn btn-primary" type="button" style="width:100%;border:1px solid;border-radius:15px;">
+                            <button class="btn btn-primary" type="button" style="width:100%;border:1px solid;border-radius:15px;text-decoration:none;">
                                 @Html.ActionLink("Dodaj", "AddUser", new { id = gathering_id })
                             </button>
                         </div>
