--- a/Views/Gathering/Details.cshtml
+++ b/Views/Gathering/Details.cshtml
@@ -60,7 +60,7 @@
                             <h3 class="name">Dodaj użytkownika</h3>
                             <p class="description"></p>
                             <button class="btn btn-primary" type="button" style="width:100%;border:1px solid;border-radius:15px;text-decoration:none;">
-                                @Html.ActionLink("Dodaj", "AddUser", new { id = gathering_id })
+                                @Html.ActionLink("Dodaj", "AddUser", new { id = gathering_id }, new { @type = "number", @class = "span4", @min = "0", @Value = "0", Style = "color: white;text-decoration:none;" })
                             </button>
                         </div>
 
@@ -70,7 +70,7 @@
                             <p class="description"></p>
                             <button class="btn btn-primary" type="button" style="width:100%;border:1px solid;border-radius:15px;">
 
-                                @Html.ActionLink("Edytuj", "Edit", new { id = gathering_id }@*,   new { @class = "btn btn-sm btn-outline-secondary" }*@)
+                                @Html.ActionLink("Edytuj", "Edit", new { id = gathering_id }, new { @type = "number", @class = "span4", @min = "0", @Value = "0", Style = "color: white;text-decoration:none;" }@*,   new { @class = "btn btn-sm btn-outline-secondary" }*@)
 
                             </button>
                         </div>
